# synth-rt

./: .gitignore  Cargo.toml  README.md  justfile  justfile.tauri.v2
.cargo/: config.toml
.github/workflows/: build.yml
src/: app.rs  chorus.rs  env.rs  lfo.rs  lib.rs  moog_filter.rs  osc.rs  reverb.rs  synth.rs
src-tauri/: Cargo.toml  tauri.conf.json
synth-rt/: justfile
synth-rt/.cargo/: config.toml
synth-rt/src-tauri/: Cargo.toml  tauri.conf.json
synth-rt/src-tauri/src/: main.rs
