[package]
name = "synth-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
# bevy = "0.14.2"
# bevy_ui = "0.14.2"
glob = "0.3.1"
midi-control = { version = "0.2.2", default-features = false }
midir = "0.10.0"
num-traits = "0.2.19"
rodio = "0.19.0"
serialport = { version = "4.6.0", default-features = false }
